--- a/Tasks/04-task.html
+++ b/Tasks/04-task.html
@@ -19,13 +19,15 @@
             this.width = width;
             this.height = height;
 
-            this.getArea = function () {
-                return this.height * this.width;
-            }
+            
+        }
 
-            this.getPerimeter = function () {
+        Rect.prototype.getArea = function () {
+                return this.height * this.width;
+        }
+
+        Rect.prototype.getPerimeter = function () {
                 return this.height * 2 + this.width * 2;
-            }
         }
 
         let rect1 = new Rect(100, 50);
